--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -14,14 +14,7 @@
 	padding: 0;
 }
 
-
-			html { 
-  background: url(images/G_with_G.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+html,
 body {
 	height: 100%;
 	overflow: hidden;
